data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4352.wast
;; 1. **Test Description**: Perform a `call_indirect` with a function type that exactly matches the type in the table, but use a `br_if` immediately after the call to conditionally branch if the result of the call is not `0`.      **Specific Constraint**: Ensuring the `br_if` evaluates the condition correctly, confirming that the call result is interpreted properly.      **Incorrect Condition Evaluation**: Check if `br_if` condition is always true or false irrespective of the call result.

(assert_invalid
  (module
    (type $sig (func (result i32)))
    (func $f (result i32)
      (i32.const 1)
    )
    (table funcref (elem $f))
    (func $type-test
      (i32.const 0)
      (call_indirect (type $sig) (i32.const 0))
      (br_if 0 (i32.const 1))
    )
  )
  "type mismatch"
)